Fix toolbar spacing/padding

--- a/vscode/webviews/chat/cells/messageCell/human/editor/HumanMessageEditor.module.css
+++ b/vscode/webviews/chat/cells/messageCell/human/editor/HumanMessageEditor.module.css
@@ -1,6 +1,6 @@
 :root {
     --human-message-editor-toolbar-height: 21px;
-    --human-message-editor-gap: 2px;
+    --human-message-editor-gap: 3px;
     --human-message-editor-cell-spacing-bottom: 6px;
 }
 
